crates/toon-schema/tests/compile_fail/reserved_tool.stderr
error: field name 'tool' is reserved
 --> tests/compile_fail/reserved_tool.rs:8:5
  |
8 |     tool: String,
  |     ^^^^
